--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ driverClassName=org.h2.Driver
 url=jdbc:h2:mem:game-of-thrones;DB_CLOSE_DELAY=-1
 username=sa
 password=sa
+
+hibernate.dialect=org.hibernate.dialect.H2Dialect
